<resources>
    <string name="app_name">Pearson HUB</string>
    <string name="intro_first_line">The Easy shopping solution</string>
    <string name="intro_second_line">Shop is in your hand now</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign Up Here</string>
    <string name="sign_in">sign in</string>
</resources>